--- a/thiepmoi.html
+++ b/thiepmoi.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Thông tin Open Graph cho ảnh đại diện -->
-    <meta property="og:image" content="https://yenstudio.com.vn/kim-matthew.jpg" />
+    <!-- <meta property="og:image" content="https://yenstudio.com.vn/kim-matthew.jpg" /> -->
     <meta property="og:image:width" content="600" /> <!-- Chiều rộng ảnh đại diện -->
     <meta property="og:image:height" content="300" /> <!-- Chiều cao ảnh đại diện -->
 
     <!-- Các thông tin khác cho Open Graph -->
     <meta property="og:title" content="TẠO - TRÂM" />
     <meta property="og:description" content="QUYẾT TẠO - NGỌC TRÂM" />
-    <meta property="og:url" content="https://yenstudio.com.vn/kim-matthew/thiepmoi.html" />
+    <meta property="og:url" content="https://yenstudio.com.vn/tao-tram/thiepmoi.html" />
     <meta property="og:type" content="website" />
     <link rel="stylesheet" href="./tao-tram/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -66,7 +66,7 @@
                 <div class="line"></div> 
             </div>
             <div class="timeline">
-                <img src="./tao-tram/anh/timeline-04.png " alt="" class="img-time" data-aos="zoom -in">
+                <img src="./tao-tram/anh/timeline-03.png " alt="" class="img-time" data-aos="zoom -in">
             </div>
             <div class="box-img">
                 <label for="" class="til1" data-aos="zoom-in">JUST MARRIED</label>
