--- a/thiepmoi.html
+++ b/thiepmoi.html
@@ -40,25 +40,25 @@
                 <img src="./tao-tram/anh/pic1-03.png" alt="" class="img1">
             </div>
             <div class="second">
-                <label for="" class="til-sec" data-aos="fade-left">QUYẾT TẠO & NGỌC TRÂM<br>
+                <label for="" class="fade-left til-sec">QUYẾT TẠO & NGỌC TRÂM<br>
                     CHỦ NHẬT, 09 THÁNG 03 NĂM 2025 <br>
                     <i>(Nhằm ngày 10 tháng 02 năm Ất Tỵ)</i></label>
             </div>
             <div class="box-save">
-                <label for="" class="save" data-aos="zoom-in">SAVE THE DATE</label>
+                <label for="" class="zoom-in save">SAVE THE DATE</label>
             </div>
             <div class="vertical-line">
                 <div class="line"></div>
             </div>
             <div class="third">
-                <label for="" class="kinhmoi" data-aos="fade-down">TRÂN TRỌNG KÍNH MỜI ANH/CHỊ/BẠN <br>
+                <label for="" class="fade-down kinhmoi">TRÂN TRỌNG KÍNH MỜI ANH/CHỊ/BẠN <br>
                     ĐẾN DỰ BỮA CƠM THÂN MẬT MỪNG LỄ CƯỚI CỦA <strong>TẠO & TRÂM</strong> TẠI:</label>
             </div>
             <div class="box-wp">
-                <img src="./tao-tram/anh/wp-03.png " alt="" class="wp" data-aos="zoom-in">
-                <label for="" class="add" data-aos="zoom-in">Sảnh Autumn, 415 Hoàng Văn Thụ, Phường 2, Quận Tân Bình, TP.HCM</label>
+                <img src="./tao-tram/anh/wp-03.png " alt="" class="zoom-in wp">
+                <label for="" class="zoom-in add">Sảnh Autumn, 415 Hoàng Văn Thụ, Phường 2, Quận Tân Bình, TP.HCM</label>
             </div>
-            <div class="box-time" data-aos="fade-down">
+            <div class="fade-down box-time">
                 <label for="" class="time1">VÀO NGÀY</label>
                 <label for="" class="time2">09.03.2025</label>
             </div>
@@ -66,26 +66,26 @@
                 <div class="line"></div> 
             </div>
             <div class="timeline">
-                <img src="./tao-tram/anh/timeline-03.png " alt="" class="img-time" data-aos="zoom -in">
+                <img src="./tao-tram/anh/timeline-03.png " alt="" class="zoom-in img-time">
             </div>
             <div class="box-img">
-                <label for="" class="til1" data-aos="zoom-in">JUST MARRIED</label>
+                <label for="" class="zoom-in til1">JUST MARRIED</label>
                 <div class="box-con">
-                    <img src="./tao-tram/anh/ye.jpg" alt="" class="img-con1" data-aos="fade-right">
-                    <img src="./tao-tram/anh/yeen.jpg" alt="" class="img-con"data-aos="fade-left">
+                    <img src="./tao-tram/anh/ye.jpg" alt="" class="fade-right img-con1">
+                    <img src="./tao-tram/anh/yeen.jpg" alt="" class="fade-left img-con">
                 </div>
                 <div class="box-con">
-                    <img src="./tao-tram/anh/yen.jpg" alt="" class="img-con1" data-aos="fade-right">
-                    <img src="./tao-tram/anh/yenn.jpg" alt="" class="img-con"data-aos="fade-left">
+                    <img src="./tao-tram/anh/yen.jpg" alt="" class="fade-right img-con1">
+                    <img src="./tao-tram/anh/yenn.jpg" alt="" class="fade-left img-con">
                 </div>
             </div>
             <div class="box-til2">
-                <label for="" class="til2" data-aos="zoom-in">BEING WITH YOU AND NOT <br>
+                <label for="" class="zoom-in til2">BEING WITH YOU AND NOT <br>
                     BEING WITH YOU IS THE ONLY WAY <br>
                     I HAVE TO MEASURE TIME</label>
             </div>
             <div class="box-image">
-                 <img src="./tao-tram/anh/pic4-03.png" alt="" class="imge" data-aos="fade-up">
+                 <img src="./tao-tram/anh/pic4-03.png" alt="" class="fade-up imge">
             </div>
             <div class="pic-end">
                 <img src="./tao-tram/anh/end-03.png" alt="" class="img-end">
@@ -133,11 +133,11 @@
     <script>
         window.onload = function() {
     // Lấy tất cả các phần tử cho các hiệu ứng fade-down, fade-up, fade-right, fade-left, zoom-in
-    const fadeDownElements = document.querySelectorAll('.kinhmoi, .box-time, .');  // Các phần tử fade-down
+    const fadeDownElements = document.querySelectorAll('.kinhmoi, .box-time');  // Các phần tử fade-down
     const fadeUpElements = document.querySelectorAll('.imge');    // Các phần tử fade-up
-    const fadeRightElements = document.querySelectorAll('.lb3, .story1');                               // Các phần tử fade-right
-    const fadeLeftElements = document.querySelectorAll('.lb3, .story2');                                // Các phần tử fade-left
-    const zoomInElements = document.querySelectorAll('.time-date, .lb-time, .lb-timee');                // Các phần tử zoom-in
+    const fadeRightElements = document.querySelectorAll('.img-con1');                               // Các phần tử fade-right
+    const fadeLeftElements = document.querySelectorAll('.img-con');                                // Các phần tử fade-left
+    const zoomInElements = document.querySelectorAll('.save, .wp, .add, .til1, .til2, .img-time');                // Các phần tử zoom-in
 
     // Cấu hình của IntersectionObserver
     const options = {
