--- a/thiepmoi.html
+++ b/thiepmoi.html
@@ -235,6 +235,10 @@
         });
 </script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
+
     <script>
         // Khởi tạo AOS
         AOS.init();
