--- a/thiepmoi.html
+++ b/thiepmoi.html
@@ -39,9 +39,8 @@
                 <img src="./tao-tram/anh/pic1-03.png" alt="" class="img1">
             </div>
             <div class="second">
-                <label for="" class="fade-left til-sec">QUYẾT TẠO & NGỌC TRÂM<br>
-                    CHỦ NHẬT, 09 THÁNG 03 NĂM 2025 <br>
-                    <i>(Nhằm ngày 10 tháng 02 năm Ất Tỵ)</i></label>
+                <label for="" class="fade-left til-sec"><i><strong>QUYẾT TẠO & NGỌC TRÂM</strong><br>
+                    CHỦ NHẬT, 09 THÁNG 03 NĂM 2025</i></label>
             </div>
             <div class="box-save">
                 <label for="" class="zoom-in save">SAVE THE DATE</label>
@@ -51,11 +50,11 @@
             </div>
             <div class="third">
                 <label for="" class="fade-down kinhmoi">TRÂN TRỌNG KÍNH MỜI ANH/CHỊ/BẠN <br>
-                    ĐẾN DỰ BỮA CƠM THÂN MẬT MỪNG LỄ CƯỚI CỦA <strong>TẠO & TRÂM</strong> TẠI:</label>
+                    ĐẾN DỰ BỮA TIỆC THÂN MẬT MỪNG LỄ CƯỚI CỦA <strong>TẠO & TRÂM</strong> TẠI:</label>
             </div>
             <div class="box-wp">
                 <img src="./tao-tram/anh/wp-03.png " alt="" class="zoom-in wp">
-                <label for="" class="zoom-in add">Sảnh Autumn, 415 Hoàng Văn Thụ, Phường 2, Quận Tân Bình, TP.HCM</label>
+                <label for="" class="zoom-in add">Sảnh Autumn,  <br> 415 Hoàng Văn Thụ, Phường 2, Quận Tân Bình, TP.HCM</label>
             </div>
             <div class="fade-down box-time">
                 <label for="" class="time1">VÀO NGÀY</label>
@@ -71,7 +70,7 @@
                 <label for="" class="zoom-in til1">JUST MARRIED</label>
                 <div class="box-con">
                     <img src="./tao-tram/anh/ye.jpg" alt="" class="fade-right img-con1">
-                    <img src="./tao-tram/anh/yeen.jpg" alt="" class="fade-left img-con">
+                    <img src="./tao-tram/anh/y.jpg" alt="" class="fade-left img-con">
                 </div>
                 <div class="box-con">
                     <img src="./tao-tram/anh/yen.jpg" alt="" class="fade-right img-con1">
